--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Codecademy</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        a:hover {
+            background-color: rgb(106, 32, 175);
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Code<span class="grijs">cademy</span></h1>
+
+    <h2>Learn to code interactively, for free.</h2>
+
+    <img src="images/code.png">
+
+    <h2>The Next Step for Your Career.</h2>
+
+    <P>The demand for coding skills is skyrocketing, and not just for developers — programming is playing a bigger role
+        in every career path.
+        Add the right technical skills to your résumé so you can pursue a more fulfilling career.</P>
+
+    <a href="https://www.codecademy.com/pro/membershiphttps://www.codecademy.com/pro/membership"><span class="link">GO
+            PRO</span></a>
+</body>
+
+</html>
